Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- Added a setupSpecificOptions method which can be monkey-patched to set
  specific connexion setting.
Bug fixes
~~~~~~~~~
-
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 